examples/good/global_var.rs
text: str = "Hello, World!";

fn main() -> {
    print(text);
}
