examples/bad/mainbreak.rs

fn main() -> {
    break;
    print("Hello, World!");
}

